Fixing letter spacing

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -31,6 +31,7 @@
 h1, h2, h3, h4, h5, h6,
 .sidebar h2 {
   text-transform: none !important;
+  letter-spacing: 0px !important;
 }
 
 /* --- Fix body font weight --- */
